@@ -50,6 +50,7 @@ setup(name='BuildStream-external',
               'dpkg_build = bst_external.elements.dpkg_build',
               'dpkg_deploy = bst_external.elements.dpkg_deploy',
               'flatpak_image = bst_external.elements.flatpak_image',
+              'flatpak_repo = bst_external.elements.flatpak_repo',
               'x86image = bst_external.elements.x86image',
               'fastbootBootImage = bst_external.elements.fastboot_bootimg',
               'fastbootExt4Image = bst_external.elements.fastboot_ext4',
